# scitex-scholar

./: .env.example  .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: docs.yml  publish-pypi.yml  test.yml
docs/architecture/: ADR-100-project-tree-link.md
docs/sphinx/: cli.rst  conf.py  index.rst  installation.rst  mcp.rst  quickstart.rst  semantic_highlight.rst
docs/sphinx/api/: auth.rst  browser.rst  citation_graph.rst  config.rst  core.rst  filters.rst  formatting.rst  impact_factor.rst  index.rst  metadata_engines.rst  migration.rst  pdf_download.rst
examples/: quickstart.py
scripts/: download_neurovista_pdfs.py
src/scitex_scholar/: README.md  __init__.py  __main__.py  ensure_workspace.py  filters.py  formatting.py  mcp_server.py
src/scitex_scholar/_mcp/: all_handlers.py  auth_tool_schemas.py  bibtex_tool_schemas.py  crossref_handlers.py  crossref_tool_schemas.py  handlers.py  job_handlers.py  job_tool_schemas.py  openalex_handlers.py  openalex_tool_schemas.py  pdf_highlight_handlers.py  pdf_tool_schemas.py  project_tool_schemas.py  tool_schemas.py
src/scitex_scholar/_sphinx_html/: .buildinfo  cli.html  genindex.html  index.html  installation.html  mcp.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  semantic_highlight.html
src/scitex_scholar/_utils/: __init__.py  create_demo_movie.sh  papers_utils.py
src/scitex_scholar/auth/: README.md  ScholarAuthManager.py  __init__.py
src/scitex_scholar/browser/: README.md  ScholarBrowserManager.py  __init__.py
src/scitex_scholar/citation_graph/: README.md  __init__.py  builder.py  database.py  database_http.py  example.py  models.py  visualization.py
src/scitex_scholar/cli/: README.md  _CentralArgumentParser.py  _argument_groups.py  _doi_operations.py  _library_index.py  _materialize.py  _project_tree.py  _url_utils.py  chrome.py  download_pdf.py  open_browser.py  open_browser_auto.py  open_browser_monitored.py
src/scitex_scholar/config/: PublisherRules.py  README.md  ScholarConfig.py  __init__.py  default.yaml
src/scitex_scholar/core/: Paper.py  Papers.py  README.md  Scholar.py  __init__.py  journal_normalizer.py  oa_cache.py  open_access.py
src/scitex_scholar/data/: README.md
src/scitex_scholar/docs/: 00_SUMMARY.md  01_STORAGE_ARCHITECTURE.md  02_PIPELINE_ORGANIZATION.md  03_PIPELINE_IMPLEMENTATION_PLAN.md  04_PIPELINE_IMPLEMENTATION_COMPLETE.md  05_DETAILS_FOR_DEVELOPERS.md  06_IMPACT_FACTOR_CITATION_INTEGRATION.md  bibfile.bib  template.py
src/scitex_scholar/examples/: 00_config.py  00_run_all.sh  01_auth.py  02_browser.py  03_01-engine.py  03_02-engine-for-bibtex.py  04_01-url.py  04_02-url-for-bibtex.py  04_02-url-for-dois.py  05_download_pdf.py  06_find_and_download.py  06_parse_bibtex.py  07_storage_integration.py  99_fullpipeline-for-bibtex.py  99_fullpipeline-for-one-entry.py  99_maintenance.py  README.md  zotero_integration.py
src/scitex_scholar/gui/: __init__.py  _app.py  _routes_graph.py
src/scitex_scholar/impact_factor/: ImpactFactorEngine.py  README.md  __init__.py
src/scitex_scholar/integration/: MIGRATION.md  README.md  __init__.py  base.py
src/scitex_scholar/jobs/: _Job.py  _JobManager.py  __init__.py  _errors.py  _executors.py
src/scitex_scholar/local_dbs/: __init__.py  crossref_scitex.py  export.py  openalex_scitex.py  unified.py
src/scitex_scholar/metadata_engines/: README.md  ScholarEngine.py  __init__.py
src/scitex_scholar/migration/: __init__.py  _connected_papers.py  _s2_resolver.py
src/scitex_scholar/pdf_download/: README.md  ScholarPDFDownloader.py  __init__.py  _cli.py
src/scitex_scholar/pdf_highlight/: __init__.py  __main__.py  _annotator.py  _blocks.py  _classifier.py  _cli.py  _colors.py  _mcp.py  highlighter.py
src/scitex_scholar/pipelines/: README.md  ScholarPipelineBibTeX.py  ScholarPipelineMetadataParallel.py  ScholarPipelineMetadataSingle.py  ScholarPipelineParallel.py  ScholarPipelineSearchParallel.py  ScholarPipelineSearchSingle.py  ScholarPipelineSingle.py  SearchQueryParser.py  __init__.py  _single_steps.py
src/scitex_scholar/search_engines/: ScholarSearchEngine.py  _BaseSearchEngine.py
src/scitex_scholar/storage/: BibTeXHandler.py  PaperIO.py  ScholarLibrary.py  _BibTeXValidator.py  _DeduplicationManager.py  _LibraryCacheManager.py  _LibraryManager.py  __init__.py  _library_audit.py  _library_dedupe.py  _library_index.py  _search_filename.py
src/scitex_scholar/url_finder/: README.md  ScholarURLFinder.py  __init__.py
src/scitex_scholar/zotero/: __init__.py
tests/: README.md  __init__.py  test_latex_parser.py  test_package_import.py  test_search_engine.py  test_text_processor.py
tests/examples/: test_quickstart.py
tests/integration/: test_browser_integration.py  test_clew_integration.py  test_download_status.py  test_pdf_highlight.py
tests/scitex_scholar/: __init__.py  test_auth_alias.py  test_clean_abstract.py  test_document_indexer.py  test_literature_review_workflow.py  test_mcp_server.py  test_mcp_vector_server.py  test_paper_acquisition.py  test_scientific_pdf_parser.py  test_vector_search_engine.py
tests/scitex_scholar/_mcp/: test_all_handlers.py
tests/scitex_scholar/_utils/: test_papers_utils.py
tests/scitex_scholar/auth/: test_ScholarAuthManager.py
tests/scitex_scholar/browser/: test_ScholarBrowserManager.py
tests/scitex_scholar/citation_graph/: test_builder.py
tests/scitex_scholar/cli/: test__materialize.py  test__project_tree.py
tests/scitex_scholar/config/: test_PublisherRules.py
tests/scitex_scholar/core/: test_journal_normalizer.py
tests/scitex_scholar/docs/: test_template.py
tests/scitex_scholar/examples/: test_00_config.py
tests/scitex_scholar/gui/: test__app.py
tests/scitex_scholar/impact_factor/: test_ImpactFactorEngine.py
tests/scitex_scholar/integration/: test_base.py
tests/scitex_scholar/jobs/: test__errors.py
tests/scitex_scholar/local_dbs/: test_crossref_scitex.py
tests/scitex_scholar/metadata_engines/: test_ScholarEngine.py
tests/scitex_scholar/migration/: test__connected_papers.py
(+1589 files in other folders)
