[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scitex-scholar"
version = "1.0.1"
description = "Scientific paper search, enrichment, download, and management for the SciTeX ecosystem"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.10"
authors = [
    { name = "Yusuke Watanabe", email = "ywatanabe@scitex.ai" },
]
keywords = [
    "scientific",
    "scholar",
    "literature",
    "bibtex",
    "pdf-download",
    "metadata",
    "research",
    "mcp",
    "mcp-server",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "scitex-io>=0.2.0",
    "scitex-browser>=0.1.0",
    "bibtexparser>=1.4.0",
    "feedparser>=6.0.0",
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
pdf = [
    "pdfplumber>=0.9.0",
]
mcp = [
    "fastmcp>=2.0.0",
]
dev = [
    "scitex-dev",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "numpy>=1.21.0",
]
all = [
    "scitex-scholar[pdf,mcp,dev]",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-scholar"
Documentation = "https://scitex-scholar.readthedocs.io"
Repository = "https://github.com/ywatanabe1989/scitex-scholar.git"
Issues = "https://github.com/ywatanabe1989/scitex-scholar/issues"

[project.entry-points."scitex_dev.docs"]
scitex-scholar = "scitex_scholar"

[project.entry-points."scitex_dev.skills"]
scitex-scholar = "scitex_scholar"

[tool.hatch.build.targets.wheel]
packages = ["src/scitex_scholar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short --cov=scitex_scholar --cov-report=term-missing"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples"]
